fixed oops in img alignment

--- a/app/styles/_focus_mode.scss
+++ b/app/styles/_focus_mode.scss
@@ -311,6 +311,7 @@
         font-size : 0.8em;
 
         display : flex;
+        align-items: center;
 
         & > * {
         }
